tests/baselines/reference/jsxReactTestSuite.errors.txt
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(15,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(17,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(21,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(22,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(22,9): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(23,20): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(24,4): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(37,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(55,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(56,5): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(57,5): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(58,6): error TS2304: Cannot find name 'span'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(59,7): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(61,5): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(62,6): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(63,5): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(64,5): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(69,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(73,6): error TS2304: Cannot find name 'span'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(79,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(81,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(87,2): error TS2503: Cannot find namespace 'Namespace'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(87,2): error TS2304: Cannot find name 'Namespace.Component'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(89,2): error TS2503: Cannot find namespace 'Namespace'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(89,2): error TS2304: Cannot find name 'Namespace.DeepNamespace.Component'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(97,2): error TS2304: Cannot find name 'font-face'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(101,2): error TS2304: Cannot find name 'x-component'.


==== tests/cases/conformance/jsx/jsxReactTestSuite.tsx (27 errors) ====
    /// <JSX factory="React.createElement" />
    declare var React: any;
    declare var Component:any;
    declare var Composite:any;
    declare var Composite2:any;
    declare var Child:any;
    declare var Namespace:any;
    declare var foo: any;
    declare var bar: any;
    declare var y:any;
    declare var x:any;
    declare var z:any;
    declare var hasOwnProperty:any;
    
    <div>text</div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div>
     ~~~
!!! error TS2304: Cannot find name 'div'.
      {this.props.children}
    </div>;
    
    <div>
     ~~~
!!! error TS2304: Cannot find name 'div'.
      <div><br /></div>
       ~~~
!!! error TS2304: Cannot find name 'div'.
            ~~
!!! error TS2304: Cannot find name 'br'.
      <Component>{foo}<br />{bar}</Component>
                       ~~
!!! error TS2304: Cannot find name 'br'.
      <br />
       ~~
!!! error TS2304: Cannot find name 'br'.
    </div>;
    
    
    <Composite>
        {this.props.children}
    </Composite>;
    
    <Composite>
        <Composite2 />
    </Composite>;
    
    var x =
      <div
       ~~~
!!! error TS2304: Cannot find name 'div'.
        attr1={
          "foo" + "bar"
        }
        attr2={
          "foo" + "bar" +
          
          "baz" + "bug"
        }
        attr3={
          "foo" + "bar" +
          "baz" + "bug"
          // Extra line here.
        }
        attr4="baz">
      </div>;
    
    (
      <div>
       ~~~
!!! error TS2304: Cannot find name 'div'.
        {/* A comment at the beginning */}
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
        {/* A second comment at the beginning */}
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
        <span>
         ~~~~
!!! error TS2304: Cannot find name 'span'.
          {/* A nested comment */}
          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
        </span>
        {/* A sandwiched comment */}
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
        <br />
         ~~
!!! error TS2304: Cannot find name 'br'.
        {/* A comment at the end */}
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
        {/* A second comment at the end */}
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
      </div>
    );
    
    (
      <div
       ~~~
!!! error TS2304: Cannot find name 'div'.
        /* a multi-line
           comment */
        attr1="foo">
        <span // a double-slash comment
         ~~~~
!!! error TS2304: Cannot find name 'span'.
          attr2="bar"
        />
      </div>
    );
    
    <div>&nbsp;</div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div>&nbsp; </div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <hasOwnProperty>testing</hasOwnProperty>;
    
    <Component constructor="foo" />;
    
    <Namespace.Component />;
     ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Namespace'.
     ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Namespace.Component'.
    
    <Namespace.DeepNamespace.Component />;
     ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Namespace'.
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Namespace.DeepNamespace.Component'.
    
    <Component { ... x } y
    ={2 } z />;
    
    <Component
        {...this.props} sound="moo" />;
    
    <font-face />;
     ~~~~~~~~~
!!! error TS2304: Cannot find name 'font-face'.
    
    <Component x={y} />;
    
    <x-component />;
     ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'x-component'.
    
    <Component {...x} />;
    
    <Component { ...x } y={2} />;
    
    <Component { ... x } y={2} z />;
    
    <Component x={1} {...y} />;
    
    
    <Component x={1} y="2" {...z} {...z}><Child /></Component>;
    
    <Component x="1" {...(z = { y: 2 }, z)} z={3}>Text</Component>;
    
    
    